log/build_2026-04-19_00-51-30/chat_pkg/stderr.log
  File "/home/vboxuser/ros_ws/install/chat_pkg/lib/python3.10/site-packages/chat_pkg/chat_node.py", line 54
    thread  threading.Thread(target=rclpy.spin,args=(node,),daemon=True)
            ^^^^^^^^^
SyntaxError: invalid syntax

